--- a/mandelbulber2/formula/ui/difs_sphere.ui
+++ b/mandelbulber2/formula/ui/difs_sphere.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>difs_sphere</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>970</width>
-    <height>5118</height>
+    <height>5668</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1578,7 +1578,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox_7">
      <property name="title">
-      <string>Cylinder shape controls</string>
+      <string>Sphere shape controls</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_9" stretch="0,0">
       <property name="spacing">
@@ -1668,7 +1668,7 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="MyDoubleSpinBox" name="spinbox_transf_radius_1">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetR_1">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
