--- a/mandelbulber2/formula/ui/testing_transform.ui
+++ b/mandelbulber2/formula/ui/testing_transform.ui
@@ -2489,7 +2489,7 @@
         <item row="1" column="0">
          <widget class="QLabel" name="label_54">
           <property name="text">
-           <string>iteration color</string>
+           <string>iteration color:</string>
           </property>
          </widget>
         </item>
