--- a/mandelbulber2/formula/ui/testing_transform.ui
+++ b/mandelbulber2/formula/ui/testing_transform.ui
@@ -1584,6 +1584,13 @@
        </property>
       </widget>
      </item>
+     <item row="2" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledJ_false">
+       <property name="text">
+        <string>testing J</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
