--- a/mandelbulber2/qt/icons.qrc
+++ b/mandelbulber2/qt/icons.qrc
@@ -33,6 +33,7 @@
     <file>icons/gradient-darker.svg</file>
     <file>icons/gradient-high-saturation.svg</file>
     <file>icons/gradient-low-saturation.svg</file>
+    <file>icons/gradient-invert.svg</file>
     <file>icons/dice_colors.svg</file>
     <file>icons/dice_colors_and_pos.svg</file>
   </qresource>
